# manicure

./: .env.example  .gitignore  .gitlab-ci.yml  docker-compose.ci.yml  docker-compose.yml  logging_config.py  pyproject.toml  readme.md  Описание.txt
app/: main.py
app/api/: __init__.py
app/config/: constants.py
app/config/components/: __init__.py  db.py  logging_config.py  redis.py
app/config/envs/: development.py
app/core/: redis.py
app/core/errors/: error_codes.py
app/core/exceptions/: base.py  handlers.py  http.py  repository.py  service.py  validation.py
app/db/models/: __init__.py
app/scripts/: load_cities.py
app/server/: server.py
app/server/utils/: exception_handler.py
app/templates/auth/: register.html
app/use_case/base_services/: base_service.py
app/use_case/city_service/: cities_list_service.py  city_service.py
app/use_case/job_service/: job_application_service.py  salon_master_invitation_service.py  vacancy_salon_service.py
app/use_case/master_service/: generate_master_url.py  master_read_service.py  master_service.py
app/use_case/photo_service/: photo_base_servise.py  photo_custom_service.py  photo_standart_servise_servise.py
app/use_case/salon_service/: generate_salon_url.py  salon_master_relation_service.py  salon_read_list_service.py  (+2 more)
data/: dump.rdb
tests/: conftest.py  test_con_redis.py  test_db_con.py  test_mail.py
tests/test_api/: test_master_api.py  test_register.py
tests/test_server/: test_login_logging.py  test_user_login.py
tests/test_utils/: _create_save_path.py  test_image.py  test_slug.py
(+173 files in other folders)
